--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
     line-height: 21.13px;
 }
 
-.navbar__list {
+.header__links-list {
     display: flex;
     justify-content: space-between;
     column-gap: 16px;
@@ -16,7 +16,7 @@
     list-style: circle;
 }
 
-.navbar__item {
+.header__links-list-item {
     display: list-item;
     text-decoration: underline;
     text-underline-offset: 4px;
@@ -27,22 +27,22 @@
 
 }
 
-.navbar__item:first-child {
+.header__links-list-item_no-bullit {
     list-style-type: none;
 }
 
-.active {
+.header__link_active {
     text-decoration: none;
 }
 
 .header__logo {
     position: relative;
-    left: -72px;
+    margin-right: 135px;
     width: 148px;
     height: 105px;
 }
 
-.header__contacts {
+.header__address {
     display: flex;
     flex-direction: column;
     max-width: 240.52px;
@@ -60,8 +60,8 @@
     position: relative;
     flex-direction: column;
     width: 100%;
-    height: 757px;
-    background-image: url('/images/cover.jpg');
+    min-height: 757px;
+    background-image: url('../images/cover.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -82,17 +82,16 @@
     width: 1100px;
     flex-direction: column;
     row-gap: 20px;
-    position: absolute;
     color: rgba(255, 255, 255, 1);
     z-index: 1;
-    padding: 165px 50px 237px 50px;
+    padding: 165px 50px 135px 50px;
     font-size: 100px;
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 0;
 }
 
-.aligned-text {
+.cover__aligned-text {
     letter-spacing: 0;
 }
 
@@ -104,13 +103,13 @@
     letter-spacing: 0.1em;
 }
 
-.aligned-text_center {
+.cover__aligned-text_center {
     align-self: center;
     line-height: 100px;
     letter-spacing: 0.2em;
 }
 
-.aligned-text_right {
+.cover__aligned-text_right {
     align-self: end;
     line-height: 100px;
     letter-spacing: 0.3em;
@@ -120,11 +119,10 @@
 
 .cover__description {
     display: flex;
-    position: relative;
     z-index: 1;
-    align-self: start;
-    top: 655px;
-    margin-left: 78px;
+    justify-content: center;
+    padding-left: 78px;
+    padding-right: 50px;
 }
 
 .cover__decsription-text {
@@ -150,22 +148,22 @@
     height: 51px;
     align-items: center;
     justify-content: center;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 22px;
     font-weight: 500;
     line-height: 25.83px;
     text-transform: uppercase;
     color: white;
+    cursor: pointer;
 }
 
 .lots {
     margin-top: 179px;
     width: 100%;
-    height: 692px;
 }
 
 .lots__heading {
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 40px;
     font-weight: 700;
     line-height: 46.96px;
@@ -181,15 +179,16 @@
     list-style: none;
     justify-content: space-between;
     margin-bottom: 30px;
-    flex-grow: 1;
     gap: 25px;
     padding-left: 25px;
     padding-right: 25px;
+    flex-grow: 1;
+    flex-wrap: wrap;
 }
 
 .lots__card-list-item {
-    width: 334px;
-    height: 563px;
+    width: 333px;
+    min-height: 563px;
     flex-grow: 1;
 }
 
@@ -200,6 +199,18 @@
     height: 100%;
 }
 
+.card_type_film {
+    background: url("../images/card-lot-01.jpg");
+}
+
+.card_type_book {
+    background: url("../images/card-lot-02.jpg");
+}
+
+.card_type_picture {
+    background: url("../images/card-lot-03.jpg");
+}
+
 .card {
     display: flex;
     position: relative;
@@ -208,31 +219,15 @@
     height: 100%;
     z-index: 1;
     justify-content: space-between;
-}
-
-.card_type_film {
-    background: url("/images/card-lot-01.jpg");
-    background-size: cover;
     background-position: center;
-}
-
-.card_type_book {
-    background: url("/images/card-lot-02.jpg");
     background-size: cover;
-    background-position: center;
-}
-
-.card_type_picture {
-    background: url("/images/card-lot-03.jpg");
-    background-size: cover;
-    background-position: center;
 }
 
 .card__title {
     padding-top: 51px;
     padding-left: 40px;
     padding-right: 40px;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     text-decoration: underline;
     text-transform: uppercase;
     font-size: 22px;
@@ -309,8 +304,8 @@
     height: 114px;
 }
 
-.about__title{
-    font-family: Raleway;
+.about__title {
+    font-family: Raleway, sans-serif;
     font-size: 40px;
     font-weight: 700;
     line-height: 46.96px;
@@ -325,7 +320,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 24px;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -338,31 +333,25 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 180px;
-    margin-bottom: 80px;
     width: 1000px;
-    height: 98px;
-    margin-left: auto;
-    margin-right: auto;
+    min-height: 98px;
+    margin: 180px auto 80px;
 }
 
 .footer__contacts {
     display: flex;
     flex-direction: column;
     width: 240.52px;
-    height: 98px;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 24.3px;
     text-align: left;
-
-
-
+    text-underline-offset: 4px;
 }
 
 .footer__menu {
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 21.13px;
@@ -375,14 +364,11 @@
 }
 
 .footer__menu-link {
-    text-decoration: none;
-}
-
-.footer__menu-list-item {
     text-decoration: underline;
+    text-underline-offset: 4px;
 }
 
-.footer__menu-list-item_active {
+.footer__menu-link_active {
     text-decoration: none;
 }
 
